T1-355 Fix icon, title and arrow alignment

--- a/src/client/components/molecules/menu-tile/menu-tile.scss
+++ b/src/client/components/molecules/menu-tile/menu-tile.scss
@@ -68,7 +68,7 @@
     font-size: 48px !important;
     display: block !important;
     position: absolute;
-    top: 27px;
+    top: 35%;
     right: 15px;
     transform: rotate(270deg);
   }
