--- a/src/client/components/organisms/tile-collection/tile.scss
+++ b/src/client/components/organisms/tile-collection/tile.scss
@@ -6,7 +6,8 @@
   -moz-box-shadow: 0px 7px 15px 0px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 7px 15px 0px rgba(0, 0, 0, 0.1);
   @include for-small-only {
-    @include grid-column(6, $sba-grid-small) margin-top: 20px;
+    @include grid-column(6, $sba-grid-small);
+    margin-top: 20px;
   }
   @include for-medium-only {
     @include grid-column(6, $sba-grid-medium);
@@ -33,7 +34,7 @@
 .tileFour {
   @include for-large-up {
     @include grid-column(3, $sba-grid-large);
-    height: 677px;
+    height: 640px;
   }
 }
 
